--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,26 +2,34 @@
     margin: 0;
     padding: 0;
 }
-a{
-    text-decoration: none   
+*{
+    text-decoration: none !important;
+}
+
+
+/*?------------------------------------------------------------NAV-----------------------------------------------------------*/
+
+.menu{
+    display: flex;
+    justify-content: flex-end;     
+    height: 15px;
+}
+nav{
+    background-color:rgba(255, 255, 255, 0.208)
 }
 
 /*?------------------------------------------------------------INDEXXXX-----------------------------------------------------------*/
 /*!-----------HEADER------------*/
 
-header{
-    background-color: gray;
-}
-
 nav{
     color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
 }
 
 header nav a img{
     padding: 7px;
-}
-header nav a img{
-    display: inline;
 }
 
 header nav ul li a{
@@ -34,26 +42,25 @@ header nav ul li{
     
 }
 
-
 /*!-----------MAIN-----------*/
 
 .hero p{
     padding: 15px;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .hero h2{
     padding: 6px;
-    background-color: rgb(0, 0, 0);
     color: white;
     display: inline;
+    border: 1px solid black;
+
 }
 
 .hero h1{
     display: inline;
     font-size: 50px;
-    border: solid 3px rgb(0, 0, 0);
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 .hero{
@@ -61,62 +68,122 @@ header nav ul li{
     height: 80vh;
     text-align: center;
     color: white;
-    background-image: url(../img/banner-1050629_1280.jpg);
+    background-image: url(../img/fondo-pagina.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.galeriaop div img{
-    text-align: center;
-    margin: 20px;
+.galeriaop {
+    position: relative; /* Esto permite que el h2 se posicione relativo a .galeriaop */
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; /* Permite que las imágenes se distribuyan en filas si no caben en una sola línea */
 }
-.galeriaop h2{
+
+.galeriaop h2 {
+    padding: 10px; 
+    position: absolute;
+    top: -1px; /* Ajusta este valor para que el texto quede sobre las imágenes */
+    left: 50%;
+    transform: translateX(-50%);
     text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    z-index: 10; /* Asegura que el texto esté por encima de las imágenes */
 }
+
+.galeriaop div img {
+    padding: 25px; 
+    margin: 25px;
+    width: 400px; 
+    height: 400px;
+}
+
 
 
 /*!-----------FOOTER-----------*/
 
 footer{
     background-color: gray;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
 }
+
 .logos img{
     width: 65px;
     height: 65px;
+    margin: 5px;
+    padding: 1px;
 }
-
 #juv{
     height: 80px;
     width: 80px;
 }
 
 .redes img{
-    height: 16px;
-    width: 16px;
+    padding: 2px;
+    margin-right: 7px;
+    height: 17px;
+    width: 17px;
 }
 
 /*?------------------------------------------------------------NOSOTROSSSS-----------------------------------------------------------*/
 
 /*!-----------MAIN-----------*/
 
-main section img{
+.foto1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.foto2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.foto3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.foto1 img{
     width: 650px;
     height: 500px;
     margin: 40px;
 }
-main section p{
+.foto2 img{
+    width: 650px;
+    height: 500px;
+    margin: 40px;
+}
+.foto3 img{
+    width: 650px;
+    height: 500px;
+    margin: 40px;
+}
+
+.foto1 p{
     padding: 15px;
     font-size: 17px;
-    border: solid 3px black;
 }
-main h1{
+.foto2 p{
+    padding: 15px;
+    font-size: 17px;
+}
+.foto3 p{
+    padding: 15px;
+    font-size: 17px;
+}
+.nos{
     font-weight: bold;
     font-size: 40px;
     text-align: center;
     margin: 15px;
 }
-main h2{
+.desc-nos{
     font-weight: bold;
     font-size: 25px;
     text-align: center;
@@ -126,23 +193,45 @@ main h2{
 
 /*!-----------MAIN-----------*/
 
-main h1{
+.eventosh1{
     text-align: center;
     font-size: 40px;
     font-weight: bold;
 }
-main div img{
+.eventos img{
     width: 200px;
     height: 100px;
-    display: inline-block;
     padding: 40px;
+}
+.eventos{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Tres columnas iguales */
+    grid-gap: 20px; /* Espacio entre imágenes */
+    padding: 20px; /* Espacio interior alrededor del grid */
 }
 
 /*?------------------------------------------------------------ACTIVIDADES-----------------------------------------------------------*/
 
+.actividades img{
+    width: 200px;
+    height: 200px;
+}
+
+.actividades{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Tres columnas iguales */
+    grid-gap: 20px; /* Espacio entre imágenes */
+    padding: 20px;
+
+}
 /*?------------------------------------------------------------CONTACTO-----------------------------------------------------------*/
 
 main iframe{
     padding: 40px ;
 }
+.info{
+    display: grid;
+    grid-template-columns: 35% 65%;
+}
+
 
